--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@fairplayvault/sdk",
   "version": "0.1.0",
+  "description": "Typed SDK for interacting with FairplayVault commit-reveal pools on Base.",
   "type": "module",
   "files": ["dist"],
   "main": "dist/index.cjs",
@@ -18,6 +19,21 @@
     "dev": "tsup --watch",
     "prepublishOnly": "npm run build"
   },
+  "keywords": [
+    "fairplay",
+    "sdk",
+    "base",
+    "usdc",
+    "commit-reveal",
+    "crypto",
+    "web3"
+  ],
+  "author": "Fairplay Labs",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/fairplay-sdk"
+  },
   "peerDependencies": {
     "viem": ">=2.0.0"
   },
@@ -25,7 +41,5 @@
     "tsup": "^8.0.0",
     "typescript": "^5.4.0",
     "viem": "^2.13.0"
-  },
-  "license": "MIT",
-  "repository": "github:your-org/fairplay-sdk"
+  }
 }
